--- a/「B07090040_ipynb」的副本.ipynb
+++ b/「B07090040_ipynb」的副本.ipynb
@@ -79,7 +79,7 @@
         "id": "rlrsDB_ESRxt",
         "outputId": "82b7e45a-7222-414f-9627-9430ef2a02fa"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -146,7 +146,7 @@
         "id": "q2O6OWNgSJ5Q",
         "outputId": "c19f0679-ddf6-4278-9917-69c094d24e95"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,7 +195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "metadata": {
         "id": "Hm_wcbatujJn"
       },
@@ -224,7 +224,7 @@
       "metadata": {
         "id": "_Z2hl8BX6Sjz"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -240,7 +240,7 @@
         "id": "9Zwe7pBvRlo6",
         "outputId": "7f63f47a-3056-4bfe-859a-f7c002b891d1"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -322,7 +322,7 @@
         "id": "4MMP47pT8Mes",
         "outputId": "975d34f2-9769-44de-8e8e-ae59a87ef6f5"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -350,7 +350,7 @@
       "metadata": {
         "id": "6rm_NtPT0lXz"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -365,7 +365,7 @@
         "id": "3wTUsnjR1biU",
         "outputId": "da590739-0ff4-41a2-fc3f-d86d74697f2c"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1057,6 +1057,152 @@
     {
       "cell_type": "code",
       "source": [
+        "positiveValues\n",
+        "#output is a dictionary-list of words in news column and the count of each of these words in train dataset where sentiment=positive"
+      ],
+      "metadata": {
+        "id": "ez7n79BH7MqN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "positiveValues.items()\n",
+        "#o/p is a dictionary with the word in news column as key and its count within the train dataset as its corresponding value"
+      ],
+      "metadata": {
+        "id": "lyDiB6og7iGq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#focus on more frequently occuring words for every sentiment=>\n",
+        "#sort in DO wrt 2nd column in each of positiveValues,negativeValues and neutralValues\n",
+        "\n",
+        "df_positive=pd.DataFrame(sorted(positiveValues.items(),key=lambda x:x[1],reverse=True))\n",
+        "df_negative=pd.DataFrame(sorted(negativeValues.items(),key=lambda x:x[1],reverse=True))\n",
+        "df_neutral=pd.DataFrame(sorted(neutralValues.items(),key=lambda x:x[1],reverse=True))"
+      ],
+      "metadata": {
+        "id": "mppGtMFd7oOE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pd1=df_positive[0][:10]\n",
+        "pd2=df_positive[1][:10]\n",
+        "\n",
+        "ned1=df_negative[0][:10]\n",
+        "ned2=df_negative[1][:10]\n",
+        "\n",
+        "nud1=df_neutral[0][:10]\n",
+        "nud2=df_neutral[1][:10]\n",
+        "\n",
+        "\n",
+        "plt.figure(1,figsize=(16,4))\n",
+        "\n",
+        "plt.bar(pd1,pd2, color ='green',\n",
+        "        width = 0.4)\n",
+        " \n",
+        "plt.xlabel(\"Words in positive dataframe\")\n",
+        "plt.ylabel(\"Count\")\n",
+        "plt.title(\"Top 10 words in positive dataframe-UNIGRAM ANALYSIS\")\n",
+        "\n",
+        "plt.savefig(\"positive-unigram.png\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "ZjL1yGKd7sRV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_positive.head(10)"
+      ],
+      "metadata": {
+        "id": "1Pr8gnsz7oNM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(1,figsize=(16,4))\n",
+        "\n",
+        "plt.bar(ned1,ned2, color ='red',\n",
+        "        width = 0.4)\n",
+        " \n",
+        "plt.xlabel(\"Words in negative dataframe\")\n",
+        "plt.ylabel(\"Count\")\n",
+        "plt.title(\"Top 10 words in negative dataframe-UNIGRAM ANALYSIS\")\n",
+        "\n",
+        "plt.savefig(\"negative-unigram.png\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "hDBAAv9j7xx2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_negative.head(10)"
+      ],
+      "metadata": {
+        "id": "iNyW20wu7xwM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(1,figsize=(16,4))\n",
+        "\n",
+        "plt.bar(nud1,nud2, color ='yellow',\n",
+        "        width = 0.4)\n",
+        " \n",
+        "plt.xlabel(\"Words in neutral dataframe\")\n",
+        "plt.ylabel(\"Count\")\n",
+        "plt.title(\"Top 10 words in neutral dataframe-UNIGRAM ANALYSIS\")\n",
+        "\n",
+        "plt.savefig(\"neutral-unigram.png\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "1bivmNXa7441"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_neutral.head(10)"
+      ],
+      "metadata": {
+        "id": "LTUy8_sL743I"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
@@ -1121,6 +1267,335 @@
       ],
       "metadata": {
         "id": "8fAcwNlhPQJO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_neutral.head(10)"
+      ],
+      "metadata": {
+        "id": "6WvAPAIQ7-5l"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "positiveValues2=defaultdict(int)\n",
+        "negativeValues2=defaultdict(int)\n",
+        "neutralValues2=defaultdict(int)\n",
+        "#get the count of every word in both the columns of df_train and df_test dataframes"
+      ],
+      "metadata": {
+        "id": "XQVCm_lE8CPD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#get the count of every word in both the columns of df_train and df_test dataframes where sentiment=\"positive\"\n",
+        "for text in df_train[df_train.sentiment==\"positive\"].news:\n",
+        "  for word in generate_N_grams(text,2):\n",
+        "    positiveValues2[word]+=1\n",
+        "\n",
+        "#get the count of every word in both the columns of df_train and df_test dataframes where sentiment=\"negative\"\n",
+        "for text in df_train[df_train.sentiment==\"negative\"].news:\n",
+        "  for word in generate_N_grams(text,2):\n",
+        "    negativeValues2[word]+=1\n",
+        "\n",
+        "#get the count of every word in both the columns of df_train and df_test dataframes where sentiment=\"neutral\"\n",
+        "for text in df_train[df_train.sentiment==\"neutral\"].news:\n",
+        "  for word in generate_N_grams(text,2):\n",
+        "    neutralValues2[word]+=1"
+      ],
+      "metadata": {
+        "id": "UlnCR2oS8Gvp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#focus on more frequently occuring words for every sentiment=>\n",
+        "#sort in DO wrt 2nd column in each of positiveValues,negativeValues and neutralValues\n",
+        "\n",
+        "df_positive2=pd.DataFrame(sorted(positiveValues2.items(),key=lambda x:x[1],reverse=True))\n",
+        "df_negative2=pd.DataFrame(sorted(negativeValues2.items(),key=lambda x:x[1],reverse=True))\n",
+        "df_neutral2=pd.DataFrame(sorted(neutralValues2.items(),key=lambda x:x[1],reverse=True))"
+      ],
+      "metadata": {
+        "id": "N0QJMhvW8Guj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pd1bi=df_positive2[0][:10]\n",
+        "pd2bi=df_positive2[1][:10]\n",
+        "\n",
+        "ned1bi=df_negative2[0][:10]\n",
+        "ned2bi=df_negative2[1][:10]\n",
+        "\n",
+        "nud1bi=df_neutral2[0][:10]\n",
+        "nud2bi=df_neutral2[1][:10]\n",
+        "\n",
+        "plt.figure(1,figsize=(16,4))\n",
+        "\n",
+        "plt.bar(pd1bi,pd2bi, color ='green',\n",
+        "        width = 0.4)\n",
+        " \n",
+        "plt.xlabel(\"Words in positive dataframe\")\n",
+        "plt.ylabel(\"Count\")\n",
+        "plt.title(\"Top 10 words in positive dataframe-BIGRAM ANALYSIS\")\n",
+        "\n",
+        "plt.savefig(\"positive-bigram.png\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "3pbcxh7P8PAY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_positive2.head(10)"
+      ],
+      "metadata": {
+        "id": "yym5kYnH8SKc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(1,figsize=(16,4))\n",
+        "\n",
+        "plt.bar(ned1bi,ned2bi, color ='red',\n",
+        "        width = 0.4)\n",
+        " \n",
+        "plt.xlabel(\"Words in negative dataframe\")\n",
+        "plt.ylabel(\"Count\")\n",
+        "plt.title(\"Top 10 words in negative dataframe-BIGRAM ANALYSIS\")\n",
+        "\n",
+        "plt.savefig(\"negative-bigram.png\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "xeYQ5kXw8UvL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_negative2.head(10)"
+      ],
+      "metadata": {
+        "id": "epFw9Md_8UtT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(1,figsize=(16,4))\n",
+        "\n",
+        "plt.bar(nud1bi,nud2bi, color ='yellow',\n",
+        "        width = 0.4)\n",
+        " \n",
+        "plt.xlabel(\"Words in neutral dataframe\")\n",
+        "plt.ylabel(\"Count\")\n",
+        "plt.title(\"Top 10 words in neutral dataframe-BIGRAM ANALYSIS\")\n",
+        "\n",
+        "plt.savefig(\"neutral-bigram.png\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "aHlebpWG8Yy_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_neutral2.head(10)"
+      ],
+      "metadata": {
+        "id": "SgwelPg-8YyB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "positiveValues3=defaultdict(int)\n",
+        "negativeValues3=defaultdict(int)\n",
+        "neutralValues3=defaultdict(int)\n",
+        "#get the count of every word in both the columns of df_train and df_test dataframes"
+      ],
+      "metadata": {
+        "id": "amwmf6eg8fBJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#get the count of every word in both the columns of df_train and df_test dataframes where sentiment=\"positive\"\n",
+        "for text in df_train[df_train.sentiment==\"positive\"].news:\n",
+        "  for word in generate_N_grams(text,3):\n",
+        "    positiveValues3[word]+=1\n",
+        "\n",
+        "#get the count of every word in both the columns of df_train and df_test dataframes where sentiment=\"negative\"\n",
+        "for text in df_train[df_train.sentiment==\"negative\"].news:\n",
+        "  for word in generate_N_grams(text,3):\n",
+        "    negativeValues3[word]+=1\n",
+        "\n",
+        "#get the count of every word in both the columns of df_train and df_test dataframes where sentiment=\"neutral\"\n",
+        "for text in df_train[df_train.sentiment==\"neutral\"].news:\n",
+        "  for word in generate_N_grams(text,3):\n",
+        "    neutralValues3[word]+=1"
+      ],
+      "metadata": {
+        "id": "O-L8lX7g8hF3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#focus on more frequently occuring words for every sentiment=>\n",
+        "#sort in DO wrt 2nd column in each of positiveValues,negativeValues and neutralValues\n",
+        "\n",
+        "df_positive3=pd.DataFrame(sorted(positiveValues3.items(),key=lambda x:x[1],reverse=True))\n",
+        "df_negative3=pd.DataFrame(sorted(negativeValues3.items(),key=lambda x:x[1],reverse=True))\n",
+        "df_neutral3=pd.DataFrame(sorted(neutralValues3.items(),key=lambda x:x[1],reverse=True))"
+      ],
+      "metadata": {
+        "id": "d7uGvtTR8qFD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pd1tri=df_positive3[0][:10]\n",
+        "pd2tri=df_positive3[1][:10]\n",
+        "\n",
+        "ned1tri=df_negative3[0][:10]\n",
+        "ned2tri=df_negative3[1][:10]\n",
+        "\n",
+        "nud1tri=df_neutral3[0][:10]\n",
+        "nud2tri=df_neutral3[1][:10]\n",
+        "\n",
+        "plt.figure(1,figsize=(16,4))\n",
+        "\n",
+        "plt.bar(pd1tri,pd2tri, color ='green',\n",
+        "        width = 0.4)\n",
+        " \n",
+        "plt.xlabel(\"Words in positive dataframe\")\n",
+        "plt.ylabel(\"Count\")\n",
+        "plt.title(\"Top 10 words in positive dataframe-TRIGRAM ANALYSIS\")\n",
+        "\n",
+        "plt.savefig(\"positive-trigram.png\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "81rBunQJ8qtj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_positive3.head(10)"
+      ],
+      "metadata": {
+        "id": "6NgD2qlS8uBy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(1,figsize=(16,4))\n",
+        "\n",
+        "plt.bar(ned1tri,ned2tri, color ='red',\n",
+        "        width = 0.4)\n",
+        " \n",
+        "plt.xlabel(\"Words in negative dataframe\")\n",
+        "plt.ylabel(\"Count\")\n",
+        "plt.title(\"Top 10 words in negative dataframe-TRIGRAM ANALYSIS\")\n",
+        "\n",
+        "plt.savefig(\"negative-trigram.png\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "4BbNfQRj8wnU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_negative3.head(10)"
+      ],
+      "metadata": {
+        "id": "eVOuRp8O8zHW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(1,figsize=(16,4))\n",
+        "\n",
+        "plt.bar(nud1tri,nud2tri, color ='yellow',\n",
+        "        width = 0.4)\n",
+        " \n",
+        "plt.xlabel(\"Words in neutral dataframe\")\n",
+        "plt.ylabel(\"Count\")\n",
+        "plt.title(\"Top 10 words in neutral dataframe-TRIGRAM ANALYSIS\")\n",
+        "\n",
+        "plt.savefig(\"neutral-trigram.png\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "ZR6GnNuG8zFl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_neutral3.head(10)"
+      ],
+      "metadata": {
+        "id": "ER89wb9E83Z3"
       },
       "execution_count": null,
       "outputs": []
